5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1650_652.log
== TEST (2019-04-05 13:37:10) 
-- CODE:
x=int(input("Digite um numero de 3 digitos: "))
a=x//100
print(a)
if(100<=x<=999):
	
	
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:37:20) 
-- CODE:
x=int(input("Digite um numero de 3 digitos: "))
a=x//100
print(a)
if(100<=x<=999):
-- ERROR:
File "XXXX", line 5
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:37:28) 
-- CODE:
x=int(input("Digite um numero de 3 digitos: "))
a=x//100
print(a)

-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:38:11) 
-- CODE:
x=int(input("Digite um numero de 3 digitos: "))
a=x%100
print(a)

-- OUTPUT:
28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:38:18) 
-- CODE:
x=int(input("Digite um numero de 3 digitos: "))
a=x%100
print(a)

-- OUTPUT:
28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:39:27) 
-- CODE:
x=int(input("Digite um numero de 3 digitos: "))
a=x%100
if(100<=x<=999):
	if(x%a=="0"):
		print(SIM)
	else:
		print(NAO)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(NAO)
NameError: name 'NAO' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:39:46) 
-- CODE:
x=int(input("Digite um numero de 3 digitos: "))
a=x%100
if(100<=x<=999):
	if(x%a=="0"):
		print("SIM")
	else:
		print("NAO")
		
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:40:00) 
-- CODE:
x=int(input("Digite um numero de 3 digitos: "))
a=x%100
if(100<=x<=999):
	if(a%x=="0"):
		print("SIM")
	else:
		print("NAO")
		
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:40:57) 
-- CODE:
x=int(input("Digite um numero de 3 digitos: "))
a=x%100
y=x%a
print(y)
if(100<=x<=999):
	if(x%a=="0"):
		print("SIM")
	else:
		print("NAO")
		
-- OUTPUT:
0
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:41:27) 
-- CODE:
x=int(input("Digite um numero de 3 digitos: "))
a=x%100
if(100<=x<=999):
	if((x%a)=="0"):
		print("SIM")
	else:
		print("NAO")
		
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:41:45) 
-- CODE:
x=int(input("Digite um numero de 3 digitos: "))
a=x%100
if((x%a)=="0"):
	print("SIM")
else:
   print("NAO")
		
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:42:06) 
-- CODE:
x=int(input("Digite um numero de 3 digitos: "))
a=x%100
if((x%a)!="0"):
	print("SIM")
else:
   print("NAO")
		
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 13:42:13) 
-- CODE:
x=int(input("Digite um numero de 3 digitos: "))
a=x%100
if((x%a)!="0"):
	print("SIM")
else:
   print("NAO")
		
-- EXECUTION TIME:
0.166826
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:42:52) 
-- CODE:
x=int(input("Digite um numero de 3 digitos: "))
a=x%100
y=x%a
if(y=="0"):
	print("SIM")
else:
   print("NAO")
		
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:42:53) 
-- CODE:
x=int(input("Digite um numero de 3 digitos: "))
a=x%100
y=x%a
if(y=="0"):
	print("SIM")
else:
   print("NAO")
		
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:43:20) 
-- CODE:
x=int(input("Digite um numero de 3 digitos: "))
a=x%100
y=x%a
print(y)
if(y == "0"):
	print("SIM")
else:
   print("NAO")
		
-- OUTPUT:
0
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:58:47) 
-- CODE:
x=float(input("Digite um numero de 3 digitos: "))
a=x%100
y=x%a
if(y == "0"):
	print("SIM")
else:
   print("NAO")
		
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:26:00) 
-- CODE:
x=float(input("Digite um numero de 3 digitos: "))
a=x%100
y=x%a
if(y == 0):
	print("SIM")
else:
   print("NAO")
		
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 02:26:08) 
-- CODE:
x=float(input("Digite um numero de 3 digitos: "))
a=x%100
y=x%a
if(y == 0):
	print("SIM")
else:
   print("NAO")
		
-- EXECUTION TIME:
0.174616
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
